<resources>
    <string name="app_name">OpenZuma</string>
    
    <!-- 底部导航 -->
    <string name="title_home">首页</string>
    <string name="title_discover">发现</string>
    <string name="title_camera">拍照</string>
    <string name="title_notifications">消息</string>
    <string name="title_profile">我的</string>
    
    <!-- 菜单 -->
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    
    <!-- 活动标题 -->
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_profile">个人资料</string>
    <string name="title_activity_camera">拍照</string>
    
    <!-- 按钮文字 -->
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_submit">提交</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_save">保存</string>
    <string name="btn_delete">删除</string>
    <string name="btn_share">分享</string>
    <string name="btn_take_photo">拍照</string>
    <string name="btn_choose_from_gallery">从相册选择</string>
    
    <!-- 提示信息 -->
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_search">搜索内容...</string>
    
    <!-- 消息 -->
    <string name="msg_loading">加载中...</string>
    <string name="msg_no_data">暂无数据</string>
    <string name="msg_network_error">网络连接失败</string>
    <string name="msg_operation_success">操作成功</string>
    <string name="msg_operation_failed">操作失败</string>
    
    <!-- 权限请求 -->
    <string name="permission_camera_title">相机权限</string>
    <string name="permission_camera_message">应用需要相机权限来拍照和扫描二维码</string>
    <string name="permission_storage_title">存储权限</string>
    <string name="permission_storage_message">应用需要存储权限来保存和读取文件</string>
    <string name="permission_location_title">位置权限</string>
    <string name="permission_location_message">应用需要位置权限来提供基于位置的服务</string>
    
    <!-- 功能描述 -->
    <string name="desc_open_zuma">OpenZuma - 开源智能助手</string>
    <string name="desc_version">版本 1.0.0</string>
    <string name="desc_about">一个功能丰富的开源Android应用，集成了多种实用功能</string>
    
    <!-- 标签 -->
    <string name="tab_hot">热门</string>
    <string name="tab_new">最新</string>
    <string name="tab_following">关注</string>
    <string name="tab_recommend">推荐</string>
    
    <!-- 错误提示 -->
    <string name="error_email_empty">邮箱不能为空</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_password_too_short">密码长度不能少于6位</string>
    
    <!-- ================== 日历模块 ================== -->
    <string name="title_calendar">日历</string>
    <string name="today">今天</string>
    <string name="all_day">全天</string>
    <string name="no_location">无地点</string>
    <string name="no_description">无描述</string>
    <string name="schedule_count">%1$d个日程</string>
    
    <!-- 重复选项 -->
    <string name="repeat_none">不重复</string>
    <string name="repeat_daily">每天</string>
    <string name="repeat_weekly">每周</string>
    <string name="repeat_monthly">每月</string>
    <string name="repeat_yearly">每年</string>
    
    <!-- 提醒选项 -->
    <string name="reminder_none">不提醒</string>
    <string name="reminder_5min">5分钟前</string>
    <string name="reminder_15min">15分钟前</string>
    <string name="reminder_30min">30分钟前</string>
    <string name="reminder_1hour">1小时前</string>
    <string name="reminder_1day">1天前</string>
    
    <!-- 日程编辑 -->
    <string name="title_schedule_edit">编辑日程</string>
    <string name="title_schedule_detail">日程详情</string>
    <string name="hint_title">标题</string>
    <string name="hint_location">地点</string>
    <string name="hint_description">描述</string>
    <string name="label_start_time">开始时间</string>
    <string name="label_end_time">结束时间</string>
    <string name="label_color">颜色</string>
    <string name="label_repeat">重复</string>
    <string name="label_reminder">提醒</string>
    
    <!-- 按钮 -->
    <string name="btn_save_schedule">保存日程</string>
    <string name="btn_delete_schedule">删除日程</string>
    <string name="btn_cancel">取消</string>
    
    <!-- 确认对话框 -->
    <string name="dialog_delete_title">删除日程</string>
    <string name="dialog_delete_message">确定要删除「%1$s」吗？</string>
    <string name="dialog_confirm_delete">删除</string>
    <string name="dialog_cancel">取消</string>
    
    <!-- 空状态 -->
    <string name="empty_no_schedule_today">今天没有日程安排</string>
    <string name="empty_no_schedule_hint">点击 + 按钮添加日程</string>
    
    <!-- 状态 -->
    <string name="status_completed">已完成</string>
    <string name="status_in_progress">进行中</string>
    <string name="status_upcoming">即将开始</string>
    
    <!-- 时间格式 -->
    <string name="time_range_format">%1$s - %2$s</string>
    <string name="date_format_ymd">yyyy年MM月dd日</string>
    <string name="date_format_md">MM月dd日</string>
    <string name="time_format_hm">HH:mm</string>
    
    <!-- 错误消息 -->
    <string name="error_schedule_title_empty">标题不能为空</string>
    <string name="error_end_time_before_start">结束时间不能早于开始时间</string>
    <string name="error_schedule_not_found">日程不存在</string>
    
    <!-- 月份 -->
    <string-array name="months">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
    
    <!-- 星期 -->
    <string-array name="week_days">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
</resources>